fixed some sidebar wrapping issues

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -9,6 +9,7 @@
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
+    white-space: nowrap;
   }
   
   .sidebar h3 {
@@ -27,6 +28,7 @@
     color: white;
     display: block;
     transition: 0.3s;
+    overflow-x: hidden;
   }
   
   .sidebar a:hover {
@@ -39,6 +41,7 @@
     right: 25px;
     font-size: 36px;
     margin-left: 50px;
+    overflow-x: hidden;
   }
   .closebtn a {
       color: white;
@@ -59,6 +62,8 @@
     background-color: #444;
   }
   
+
+
   #main {
     transition: margin-left .5s;
     padding: 16px;
